CUANTO-95: Prevent the data table from overflowing past its container

--- a/grails/web-app/css/analysis.css
+++ b/grails/web-app/css/analysis.css
@@ -178,3 +178,8 @@
 	zoom:1;
 	*display:inline;
 }
+
+#resultsTabContents {
+    width: 100%;
+    overflow: auto;
+}
